docs/vocabulary-synopsis/_sources/type/Interval/v5/index.rst.txt
:orphan:

Interval (v5)
=============

.. note::
   This is the **latest version** of this type.

**Previous Version:** :doc:`v4 <../v4/index>`

**URI:** `http://clams.ai/vocabulary/type/Interval/v5 <http://clams.ai/vocabulary/type/Interval/v5>`_

**Shortname:** ``Interval``

**Inherits from:** :doc:`Region (v6) <../../Region/v6/index>`

**Included in vocabulary versions:** :doc:`1.1.0 <../../../1.1.0/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/Interval/v5 <http://mmif.clams.ai/vocabulary/Interval/v5>`_


Description
-----------

An annotation over an interval of linear primary data, either a text, a video or audio stream. An Interval may be defined by pointing directly into primary data (by using start and end offsets) or by linking to one or more other Annotations with the targets property. This annotation type is intended to be an abstract type and typically one of the sub types will be used.


Properties
----------

Synopsis
^^^^^^^^

*Properties marked with* **\*** *are required.*

.. list-table::
   :header-rows: 1
   :widths: 15 10 15 60

   * - Property
     - Type
     - Origin
     - Description
   * - ``end``
     - integer
     - *native*
     - The ending offset in the primary data. This point is exclusive. For time intervals, the unit is ... `(more) <#end>`__

   * - ``start``
     - integer
     - *native*
     - The starting offset in the primary data. This point is inclusive. For time intervals, the unit is ... `(more) <#start>`__

   * - ``targets``
     - array of string
     - *native*
     - IDs of a sequence of annotations covering the region of primary data referred to by this ... `(more) <#targets>`__

   * - ``timeUnit``
     - string
     - :doc:`Region (v6) <../../Region/v6/index>`
     - Specifies which unit of time the measurement is based. Can be seconds or milliseconds, or in case ... `(more) <#timeunit>`__

   * - ``classification``
     - object
     - :doc:`Annotation (v7) <../../Annotation/v7/index>`
     - A map from label values to their "score" numbers provided by a classifier. The score can be ... `(more) <#classification>`__

   * - ``classifications``
     - object
     - :doc:`Annotation (v7) <../../Annotation/v7/index>`
     - Alias for the classification metadata. Here for historical reasons. `(more) <#classifications>`__

   * - ``document``
     - string
     - :doc:`Annotation (v7) <../../Annotation/v7/index>`
     - The identifier of the document that the annotation is over. `(more) <#document>`__

   * - ``label``
     - string
     - :doc:`Annotation (v7) <../../Annotation/v7/index>`
     - A label given to this object by classification. The value must be a simple string value of the ... `(more) <#label>`__

   * - ``labelset``
     - array of string
     - :doc:`Annotation (v7) <../../Annotation/v7/index>`
     - When an annotation object contains results of a classification task, this metadata is used to ... `(more) <#labelset>`__

   * - ``labelsetUri``
     - string
     - :doc:`Annotation (v7) <../../Annotation/v7/index>`
     - A URI to an externally defined labelset. Since the labelset metadata is a list of simple strings, ... `(more) <#labelseturi>`__

   * - ``id`` **\***
     - string
     - :doc:`Thing (v1) <../../Thing/v1/index>`
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the ... `(more) <#id>`__



Native
^^^^^^


end
"""

- type: *integer*
- required: no

The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.


start
"""""

- type: *integer*
- required: no

The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.


targets
"""""""

- type: *array of string*
- required: no

IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation).


Inherited from :doc:`Region (v6) <../../Region/v6/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


timeUnit
""""""""

- type: *string*
- required: no

Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*. If not specified, *milliseconds* (in whole numbers) is assumed.

.. note::

   This metadata is only relevant for time-based annotations.


Inherited from :doc:`Annotation (v7) <../../Annotation/v7/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


classification
""""""""""""""

- type: *object*
- required: no

A map from label values to their "score" numbers provided by a classifier. The score can be probability, similarity, confidence, or any other real number that was used to determine the label value.

*Optional* on top of the ``label`` property. However when this property is used, the ``label`` property must be one of the keys and the keys must match to the values defined in the ``labelset`` or ``labelsetUri`` annotation metadata.


classifications
"""""""""""""""

- type: *object*
- required: no

Alias for the ``classification`` metadata. Here for historical reasons.


document
""""""""

- type: *string*
- required: no

The identifier of the document that the annotation is over.


label
"""""

- type: *string*
- required: no

A label given to this object by classification. The value must be a simple string value of the label and must be one of the values defined in the ``labelset`` or ``labelsetUri`` annotation metadata.

For example, for the ``Sentence`` subtype, this could be used to indicate the type of sentence, such as "declarative", "interrogative", "exclamatory", etc. For ``NamedEntity`` subtype, this could be used to indicate the type of named entity, such as "PER", "ORG", "LOC", "MISC" (following the CoNLL-2003 labels).

For non-linguistic annotations, for example for ``TimeFrame``, this could be used to indicate the type of the time frame, such as "speech", "music", "noise", "bars-and-tones", etc, for acoustic classification. Or "slate", "lower-third", "credits" for visual classification of video frames.

.. note::

   Annotations from a type of classifier model must have this property.


labelset
""""""""

- type: *array of string*
- required: no

When an annotation object contains results of a classification task, this metadata is used to specify the label values used in classification. Individual annotations then must have ``label`` property that is one of the values in this list.

.. note::

   Annotations from a classifier app must have this metadata or ``labelsetUri`` metadata.

.. note::

   Not all of labels specified in the ``labelset`` must occur in the output annotations. For example, a ``labelset`` can contain a *catch-all* negative label, but if the negative label can be not interesting enough to keep in the output annotation.


labelsetUri
"""""""""""

- type: *string*
- required: no

A URI to an externally defined labelset. Since the ``labelset`` metadata is a list of simple strings, this URI can be used to point to a more detailed definition of the labelset. This can be a JSON-LD document or a SKOS concept scheme, for example.

.. note::

   Annotations from a classifier app must have this metadata or ``labelset`` metadata.


Inherited from :doc:`Thing (v1) <../../Thing/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


id
""

- type: *string*
- required: yes

A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.


JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "labelset": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "When an annotation object contains results of a classification task, this metadata is used to specify the label values used in classification. Individual annotations then must have <code>label</code> property that is one of the values in this list. <br><br> [note] Annotations from a classifier app must have this metadata or <code> labelsetUri </code> metadata. [/note]<br><br> [note] Not all of labels specified in the <code>labelset</code> must occur in the output annotations. For example, a <code>labelset</code> can contain a <i>catch-all</i> negative label, but if the negative label can be not interesting enough to keep in the output annotation. [/note]"
       },
       "labelsetUri": {
         "type": "string",
         "description": "A URI to an externally defined labelset. Since the <code>labelset</code> metadata is a list of simple strings, this URI can be used to point to a more detailed definition of the labelset. This can be a JSON-LD document or a SKOS concept scheme, for example. <br><br> [note] Annotations from a classifier app must have this metadata or <code> labelset </code> metadata. [/note]"
       },
       "label": {
         "type": "string",
         "description": "A label given to this object by classification. The value must be a simple string value of the label and must be one of the values defined in the <code>labelset</code> or <code>labelsetUri</code> annotation metadata. <br><br> For example, for the <code>Sentence</code> subtype, this could be used to indicate the type of sentence, such as \"declarative\", \"interrogative\", \"exclamatory\", etc. For <code>NamedEntity</code> subtype, this could be used to indicate the type of named entity, such as \"PER\", \"ORG\", \"LOC\", \"MISC\" (following the CoNLL-2003 labels). <br><br> For non-linguistic annotations, for example for <code>TimeFrame</code>, this could be used to indicate the type of the time frame, such as \"speech\", \"music\", \"noise\", \"bars-and-tones\", etc, for acoustic classification. Or \"slate\", \"lower-third\", \"credits\" for visual classification of video frames. <br><br> [note] Annotations from a type of classifier model must have this property. [/note]"
       },
       "classifications": {
         "additionalProperties": {
           "type": "number"
         },
         "type": "object",
         "description": "Alias for the <code>classification</code> metadata. Here for historical reasons."
       },
       "classification": {
         "additionalProperties": {
           "type": "number"
         },
         "type": "object",
         "description": "A map from label values to their \"score\" numbers provided by a classifier. The score can be probability, similarity, confidence, or any other real number that was used to determine the label value. <br><br> <i>Optional</i> on top of the <code>label</code> property. However when this property is used, the <code>label</code> property must be one of the keys and the keys must match to the values defined in the <code>labelset</code> or <code>labelsetUri</code> annotation metadata."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*. If not specified, *milliseconds* (in whole numbers) is assumed. <br><br> [note] This metadata is only relevant for time-based annotations. [/note]"
       },
       "start": {
         "type": "integer",
         "description": "The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "end": {
         "type": "integer",
         "description": "The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "targets": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation)."
       }
     },
     "required": [
       "id"
     ],
     "type": "object"
   }